QA fixes
closes #160
closes #162

Squashed commit of the following:

commit a89d1bafadabb553f864d7db87e274cba518adef
Author: Michael Davis <mkizziah38@gmail.com>
Date:   Fri Sep 12 16:03:51 2014 -0400

    Font changed.
t added.

commit 2f29ef2b80c4f9deebed327c434847652776b40d
Author: Michael Davis <mkizziah38@gmail.com>
Date:   Fri Sep 12 14:25:56 2014 -0400

    Home page header greeting changed. Content below picture changed.

--- a/app/assets/stylesheets/partials/_request_access.sass
+++ b/app/assets/stylesheets/partials/_request_access.sass
@@ -36,7 +36,7 @@
         margin-left: -0.3em
       span
         margin-left: 0.2em
-        font-size: 1.4em
         font-weight: 500
       p
+        font-size: 18px
         font-weight: 300
